# hrms

./: .env-dev  Dockerfile  Makefile  alembic.ini  pyproject.toml
compose_files/: postgres.yaml  prod_app.yaml
scripts/: run_app.sh
src/application/api/v1/: app.py  utils.py
src/application/api/v1/departments/: router.py
src/application/api/v1/employees/: router.py  schemas.py
src/application/api/v1/events/: router.py  schemas.py
src/application/api/v1/stats/: router.py
src/config/: contanier.py  settings.py
src/domain/: interfaces.py
src/domain/entities/: base.py  department.py  employee.py  event.py  kpi.py
src/domain/usecases/: base.py  department.py  employee.py  event.py  kpi.py  stats.py
src/gateways/postgres/: department.py  employee.py  event.py  kpi.py  statsgateway.py
src/gateways/postgres/migrations/: env.py
src/gateways/postgres/migrations/versions/: 35312d69b758_initial.py  636d9c98e44a_initial.py  7cd0c9ae9f32_added_events.py  d3474c5cc2b7_added_events.py  fcdc88ab08a7_initial.py
src/gateways/postgres/models/: department.py  employee.py  events.py  kpi_records.py
src/templates/: department_card.html  department_detail.html  departments.html  departments_options.html  employee_card.html  employee_detail.html  employee_form.html  employee_kpi_chart.html  employee_list.html  employee_update_form.html  employees.html  employees_page.html  event_card.html  events_history.html  events_list.html  headcount_chart.html  index.html  main.html  statistics.html
tests/: test_build_kpi_log.py
